@@ -77,6 +77,7 @@ BA  17- QXQ_div_ratlift renamed to QXQ_div
     21- ZX_Uspensky(flag = 0) is now guaranteed to find all rational roots
     22- lfunzeros: allow intervals not contained in R^+
     23- removed obsolete function 'bnfcompress'
+    24- [libpari] rename perf -> qfperfection
 
   Added
      1- new GP function rootsof1
